[package]
name = "event_launcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
subprocess = "0.2.8"
futures-lite = "1.12.0"
simplelog = "0.11.0"
log = { version = "0.4", features = ["std", "serde"] }
async-global-executor = "2.0.2"
futures-util = "0.2.1"
lapin = "1.8.1"
clap = "2.33.0"
regex = "1"
jq-rs = "0.4.1"
yaml-rust = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1.0.59"

